@@ -14,6 +14,7 @@ BUGFIX:
 * CLASS ZoneStore/AddressStore/ObjStore/ServiceStore | bugfix to NOT search parentstore of object name during creation of new object
 * class UTIL | bugfix for Fawkes config type related to timezone setting
 * class Schedule | bugfix for method setRecurringDaily() - rewritexml correction
+* UTIL type=rule | bugfix for actions=from-Set-Any / actions=src-dst-swap
 
 GENERAL:
 * framework | API KEY will be revert to send via URL, not using the secure method to send via Header which is available since PAN-OS 9.0
